syntax = "proto3";

package yandex.cloud.priv.vpc.v1.inner;

import "ydb/public/api/client/yc_private/operation/operation.proto";
import "ydb/public/api/client/yc_private/common/validation.proto";
import "ydb/public/api/client/yc_private/vpc/network.proto";
import "ydb/public/api/client/yc_private/vpc/subnet.proto";
import "ydb/public/api/client/yc_private/vpc/route_table.proto";
import "ydb/public/api/client/yc_private/vpc/security_group.proto";
import "ydb/public/api/client/yc_private/vpc/address.proto";
import "ydb/public/api/client/yc_private/vpc/gateway.proto";

option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/vpc/inner;vpcinnerpb";

option java_outer_classname = "PVCS";

service ConsoleVpcService {
  rpc ListFolderOperations (ListFolderOperationsRequest) returns (ListFolderOperationsResponse);

  rpc BulkGetVpcObjects (BulkGetVpcObjectsRequest) returns (BulkGetVpcObjectsResponse);
}

message ListFolderOperationsRequest {
  string folder_id = 1 [(required) = true];
  int64 page_size = 2 [(value) = "<=1000"];
  string page_token = 3 [(length) = "<=1000"];
}

message ListFolderOperationsResponse {
  repeated operation.Operation operations = 1;
  string next_page_token = 2;
}

message BulkGetVpcObjectsRequest {
  string cloud_id = 1 [(required) = true];
  Mode mode = 2;
  repeated string types = 3; // supported types: ["networks", "subnets", "route_tables", "security_groups"]

  enum Mode {
    MODE_UNSPECIFIED = 0;
    GET = 1;
    USE = 2;
  }
}

message BulkGetVpcObjectsResponse {
  repeated Network networks = 1;
  repeated Subnet subnets = 2;
  repeated RouteTable route_tables = 3;
  repeated SecurityGroup security_groups = 4;
  repeated Address addresses = 5;
  repeated Gateway gateways = 6;
}
